--- a/Unicef/start_dreamweaver_first-website-2/completed/styles/main.css
+++ b/Unicef/start_dreamweaver_first-website-2/completed/styles/main.css
@@ -149,3 +149,8 @@ a:hover, a:active, a:focus {
 #hero {
 	position: relative;
 }
+<div class="login">
+				<input type="text" placeholder="username" name="user"><br>
+				<input type="password" placeholder="password" name="password"><br>
+				<input type="button" value="Login">
+		</div>
